<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="envoyer"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:scaleType="fitEnd"
        android:src="@drawable/backgraound" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="43sp"
        android:text="@string/food_space"
        android:textColor="@color/mainRed"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/baseline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        android:text="@string/baseLineAppName"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/baseline"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/logoIcon"
                android:layout_width="321.31sp"
                android:layout_height="147.99sp"
                android:layout_marginTop="77.2sp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/designBlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logoIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="77.8sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="46sp"
                        android:layout_height="46sp"
                        android:layout_marginEnd="32sp"
                        android:src="@drawable/jus" />

                    <ImageView
                        android:layout_width="46sp"
                        android:layout_height="46sp"
                        android:layout_marginEnd="32sp"
                        android:src="@drawable/pommes" />

                    <ImageView
                        android:layout_width="46sp"
                        android:layout_height="46sp"
                        android:layout_marginEnd="32sp"
                        android:src="@drawable/sante" />

                    <ImageView
                        android:layout_width="46sp"
                        android:layout_height="46sp"
                        android:src="@drawable/viande" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="14sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="46sp"
                        android:layout_height="46sp"
                        android:layout_marginEnd="30sp"
                        android:src="@drawable/idee" />

                    <ImageView
                        android:layout_width="46sp"
                        android:layout_height="46sp"
                        android:layout_marginEnd="30sp"
                        android:src="@drawable/raisains" />

                    <ImageView
                        android:layout_width="46sp"
                        android:layout_height="46sp"
                        android:src="@drawable/smile" />

                </LinearLayout>

                <ImageView
                    android:layout_width="46sp"
                    android:layout_height="46sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="14sp"
                    android:src="@drawable/ouef" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/idstart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/designBlock"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="73sp"
                android:onClick="envoyer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textColor="@color/mainGreen"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="37dp"
                    android:layout_height="21dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16.5sp"
                    android:src="@drawable/forward" />

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>